# chuk-code-raptor

./: .coverage  .gitignore  README.md  css_performance_results.json  file_processor_config.yaml  hello.py  performance_results.json  pyproject.toml
examples/: cpg_demo.py  enhanced_debug_test.py  file_processor_demo.py  parsers_demo.py  raptor_demo.py  semantic_chunk_demo.py  simple_parser_demo.py  tree_sitter_chunking_demo.py
examples/chunking/: advanced_semantic_chunk_demo.py  code_chunk_demo.py  document_chunk_demo.py
examples/parsing/: css_parsing_demo.py  css_performance_demo.py  debug_parser_loading.py  html_parsing_demo.py  html_performance_demo.py  json_parsing_demo.py  json_performance_demo.py  latex_parsing_demo.py  markdown_parsing_demo.py  markdown_performance_demo.py  python_parsing_demo.py  python_performance_demo.py  rss_atom_parsing_demo.py  text_parsing_demo.py  tree_sitter_diagnostic.py  xml_parsing_demo.py
examples/samples/: sample.html  sample.js  sample.json  sample.md  sample.py  sample.rs
samples/: README.md
samples/code_test_project/: .gitignore  Makefile  README.md  package.json  requirements.txt
samples/code_test_project/config/: app.yaml  development.json
samples/code_test_project/docs/: api.md
samples/code_test_project/scripts/: build.sh  deploy.py
samples/code_test_project/src/frontend/: App.tsx
samples/code_test_project/src/frontend/contexts/: AuthContext.tsx
samples/code_test_project/src/frontend/utils/: helpers.ts
samples/code_test_project/src/python/: auth.py  database.py  main.py  utils.py
samples/code_test_project/tests/: test_auth.py  test_utils.js
scripts/: create_code_test_directory.py
src/chuk_code_raptor/: cli.py
src/chuk_code_raptor/chunking/: __init__.py  base.py  code_chunk.py  config.py  config.yaml  document_chunk.py  engine.py  heuristic_base.py  registry.py  semantic_chunk.py  tree_sitter_base.py
src/chuk_code_raptor/chunking/parsers/: __init__.py  atom.py  available_parsers.py  base.py  config.yaml  css.py  feed.py  html.py  javascript.py  json.py  latex.py  markdown.py  python.py  rdf.py  registry.py  rss.py  rss_atom.py  rust.py  simple.py  text.py  xml.py
src/chuk_code_raptor/chunking/tree_sitter_chunker/: __init__.py  base.py  config.py  python_chunker.py
src/chuk_code_raptor/chunking/tree_sitter_chunker/configs/: javascript.yaml  python.yaml
src/chuk_code_raptor/core/: __init__.py  models.py
src/chuk_code_raptor/file_processor/: __init__.py  config.py
src/chuk_code_raptor/graph/: __init__.py  analytics.py  builder.py  core.py  models.py
src/chuk_code_raptor/raptor/: __init__.py  builder.py  core.py  models.py
tests/chunking/: test_base.py  test_code_chunk.py  test_document_chunk.py  test_engine.py  test_heuristic_base.py  test_init.py  test_integration.py  test_semantic_chunk.py  test_tree_sitter_base.py
tests/chunking/parsers/: test_atom_parser.py  test_css_parser.py  test_feed_parser.py  test_json_parser.py  test_python_parser.py  test_rdf_parser.py  test_rss_parser.py  test_text_parser.py  test_xml_parser.py
