[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-code-raptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_code_raptor*"]
